tournament winner Working solution with arraylist & List.of